# mcp-finance-server-py

./: README.md  pyproject.toml  requirements.txt
finance_mcp/: __init__.py  cli.py  server.py  tools.py
